--- a/AccountBook/Info.plist
+++ b/AccountBook/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSUserNotificationsUsageDescription</key>
+	<string>CashFlow会定期提醒你记账哦</string>
 </dict>
 </plist>
