[Feature & Fix]: 很多更新 * 添加和修改账目的页面目前采取了可滚动的界面设计，因此点击输入框后，图标和文字不会再发生缩放 * 添加和修改账目的页面目前可以从左向右滑动返回了 * iOS 17+的用户的主页会默认使用全功能面板 * 修复了批量删除账目后，灵动岛和实时通知消息没有及时变更的问题 * 调整了部分组件的视觉效果

--- a/AccountBook.xcodeproj/xcshareddata/xcschemes/AccountWidgetExtension.xcscheme
+++ b/AccountBook.xcodeproj/xcshareddata/xcschemes/AccountWidgetExtension.xcscheme
@@ -17,8 +17,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B221A3332C96B17200347D4C"
-               BuildableName = "AccountWidgetExtension.appex"
-               BlueprintName = "AccountWidgetExtension"
+               BuildableName = "CashFlowWidgetExtension.appex"
+               BlueprintName = "CashFlowWidgetExtension"
                ReferencedContainer = "container:AccountBook.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -31,8 +31,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B2B9CFB72C0B565600EC4F84"
-               BuildableName = "AccountBook.app"
-               BlueprintName = "AccountBook"
+               BuildableName = "CashFlow.app"
+               BlueprintName = "CashFlow"
                ReferencedContainer = "container:AccountBook.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -62,8 +62,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B2B9CFB72C0B565600EC4F84"
-            BuildableName = "AccountBook.app"
-            BlueprintName = "AccountBook"
+            BuildableName = "CashFlow.app"
+            BlueprintName = "CashFlow"
             ReferencedContainer = "container:AccountBook.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -98,8 +98,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B2B9CFB72C0B565600EC4F84"
-            BuildableName = "AccountBook.app"
-            BlueprintName = "AccountBook"
+            BuildableName = "CashFlow.app"
+            BlueprintName = "CashFlow"
             ReferencedContainer = "container:AccountBook.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
