--- a/AccountBook.xcodeproj/xcshareddata/xcschemes/AccountBook.xcscheme
+++ b/AccountBook.xcodeproj/xcshareddata/xcschemes/AccountBook.xcscheme
@@ -16,8 +16,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B2B9CFB72C0B565600EC4F84"
-               BuildableName = "CashFlow.app"
-               BlueprintName = "CashFlow"
+               BuildableName = "AccountBook.app"
+               BlueprintName = "AccountBook"
                ReferencedContainer = "container:AccountBook.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B2B9CFB72C0B565600EC4F84"
-            BuildableName = "CashFlow.app"
-            BlueprintName = "CashFlow"
+            BuildableName = "AccountBook.app"
+            BlueprintName = "AccountBook"
             ReferencedContainer = "container:AccountBook.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -62,8 +62,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "B2B9CFB72C0B565600EC4F84"
-            BuildableName = "CashFlow.app"
-            BlueprintName = "CashFlow"
+            BuildableName = "AccountBook.app"
+            BlueprintName = "AccountBook"
             ReferencedContainer = "container:AccountBook.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
